WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25177
HTMLMediaElement: QTMedia not supported in 64-bit QTKit
https://bugs.webkit.org/show_bug.cgi?id=25177
Summary
HTMLMediaElement: QTMedia not supported in 64-bit QTKit
Eric Carlson
Reported
2009-04-13 21:46:06 PDT
QTTrack's -media method always return NULL in 64-bit QTKit, so MediaPlayerPrivate::disableUnsupportedTracks should get the track type with the track's QTTrackMediaTypeAttribute attribute.
Attachments
proposed patch
(3.11 KB, patch)
2009-04-13 21:50 PDT
,
Eric Carlson
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-04-13 21:50:18 PDT
Created
attachment 29457
[details]
proposed patch
Mark Rowe (bdash)
Comment 2
2009-04-13 21:59:55 PDT
Comment on
attachment 29457
[details]
proposed patch r=me
Eric Carlson
Comment 3
2009-04-13 22:04:51 PDT
http://trac.webkit.org/changeset/42477
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug