2009-04-13  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=25177

        QTTrack's -media method always return NULL in 64-bit QTKit, so
        MediaPlayerPrivate::disableUnsupportedTracks should use
        QTTrackMediaTypeAttribute to get a track's type.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::disableUnsupportedTracks):


Canonical link: https://commits.webkit.org/34531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42477 268f45cc-cd09-0410-ab3c-d52691b4dbfc